--- a/pinout.css
+++ b/pinout.css
@@ -22,6 +22,9 @@ footer p {
     margin: 0;
     text-align: center;
 }
+footer a.selected {
+    text-decoration: none;
+}
 nav {
     text-align: center;
     margin-top: 20px;
